# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  29 Apr 2003; Martin Schlemmer <azarah@gentoo.org>:

    Change the root check back the way it was, else it breaks with non bash
	shells;  modified /etc/profile.

  29 Apr 2003; Martin Schlemmer <azarah@gentoo.org>:

    Change test in /etc/profile for root to '[ "$EUID" -eq 0 ]', bug #20140.

  27 Apr 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add various patches from Rachel Holmes <rach@gmx.net>:

      Dropped use of 'cat' in bash scripts, '$(<$file)' is there for that
      purpose.  Modified:
    
        /etc/init.d/net.ppp0
        /etc/init.d/nscd
        /sbin/functions.sh
        /sbin/rc
        /sbin/rc-daemon.sh
        /sbin/rc-envupdate.sh.bash
        /sbin/runscript.sh

      Exchanged some gratuitous use of awk for grep. Awk is a little resource
      hungry just for a simple test. (I [azarah] did not apply the changes to
      tests for 'devfs', as having 'usbdevfs' in the equation will break
      things).  Modified /sbin/rc for this.

      Gentoo enforces having /proc, so uname -r is a little redundant when the
      information is available without an external command.  Modified:

        /etc/init.d/modules
        /etc/init.d/serial
        /sbin/functions.sh
        /sbin/modules-update

      Changed 'id -u' commands to use $EUID in bash executed scripts, same
      result no extra command.  Modified:

        /sbin/rc-envupdate.sh
        /sbin/rc-envupdate.sh.bash
        /sbin/rc-update

      Removed all the cat sections, and the separate echo sections.  The output
      is _exactly_ the same, minus some spare spaces that have been removed.
      Fourfold speed increase in the (granted flimsy) tests I have done.
      Modified /sbin/rc-help.sh for this.

      Final remaining 'cat' commands removed, in favour of using bash's internal